--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
+          
+  
   <dependencies>
     <dependency>
 			<groupId>junit</groupId>
@@ -22,4 +23,15 @@
 			<scope>test</scope>
 	</dependency>
   </dependencies>
+  <build>
+  	<plugins>
+  	<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <argLine>-Xss512m</argLine>
+            </configuration>
+        </plugin>
+    </plugins>
+  </build>
 </project>
